fix: accesbility color contrast

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -67,7 +67,7 @@ body {
 }
 
 .list li::marker {
-  @apply text-blue-500 dark:text-amber-500;
+  @apply text-blue-600 dark:text-amber-500;
 }
 
 .list {
